; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_crypto.c_pohmelfs_crypto_exit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_crypto.c_pohmelfs_crypto_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pohmelfs_sb = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pohmelfs_crypto_exit(%struct.pohmelfs_sb* %0) #0 {
  %2 = alloca %struct.pohmelfs_sb*, align 8
  store %struct.pohmelfs_sb* %0, %struct.pohmelfs_sb** %2, align 8
  %3 = load %struct.pohmelfs_sb*, %struct.pohmelfs_sb** %2, align 8
  %4 = call i32 @pohmelfs_sys_crypto_exit(%struct.pohmelfs_sb* %3)
  %5 = load %struct.pohmelfs_sb*, %struct.pohmelfs_sb** %2, align 8
  %6 = getelementptr inbounds %struct.pohmelfs_sb, %struct.pohmelfs_sb* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @kfree(i32 %7)
  %9 = load %struct.pohmelfs_sb*, %struct.pohmelfs_sb** %2, align 8
  %10 = getelementptr inbounds %struct.pohmelfs_sb, %struct.pohmelfs_sb* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @kfree(i32 %11)
  ret void
}

declare dso_local i32 @pohmelfs_sys_crypto_exit(%struct.pohmelfs_sb*) #1

declare dso_local i32 @kfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
